--- a/src/index.css
+++ b/src/index.css
@@ -9,4 +9,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #F5F5F5;
+  overflow-x: hidden;
+}
+
+#root{
+  overflow-x: hidden;
 }
